rename directory & add fix nil pointer
