# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/record": {
+        "/api/allrecords": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -47,7 +47,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/record": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -123,7 +125,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Record"
+                            "$ref": "#/definitions/domain.Records"
                         }
                     },
                     "400": {
@@ -440,7 +442,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/domain.Record"
+                        "$ref": "#/definitions/domain.Records"
                     }
                 }
             }
@@ -453,7 +455,7 @@
                 }
             }
         },
-        "domain.Record": {
+        "domain.Records": {
             "type": "object",
             "properties": {
                 "description": {
