# internal/domain/response.go
@@ -5,10 +5,6 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
-type Detail struct {
-	Detail string `json:"detail"`
-}
-
 type MessageResponse struct {
 	Message string `json:"message"`
 }
@@ -18,11 +14,7 @@ type StatusResponse struct {
 }
 
 type GetAllRecordResponse struct {
-	Data []Record `json:"data"`
-}
-
-func WriteDetailsResponse(ctx *gin.Context, code int, text string) {
-	ctx.JSON(code, Detail{Detail: text})
+	Data []Records `json:"data"`
 }
 
 func ServerResponse(ctx *gin.Context, statusCode int, message string) {
